# NeuralNetworkLibrary

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  makefile  neuralNetwork.c  neuralNetwork.h
include/: neuralNetwork.h
include/nn/: core.h
src/: CMakeLists.txt  neuralNetwork.c
tests/: CMakeLists.txt
